[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Tiles/tile_0859.png" type="Texture" id=1]
[ext_resource path="res://Assets/Tiles/tile_0861.png" type="Texture" id=2]
[ext_resource path="res://Assets/Tiles/tile_0858.png" type="Texture" id=3]
[ext_resource path="res://TurretEnemy.gd" type="Script" id=4]
[ext_resource path="res://Assets/Tiles/tile_0860.png" type="Texture" id=5]
[ext_resource path="res://Assets/Tiles/tile_0896.png" type="Texture" id=6]
[ext_resource path="res://LaserBeam.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.4834, 9.21107 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "vertical",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "vertical_firing",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "horizontal",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "vertical_charging",
"speed": 15.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "horizontal_charging",
"speed": 15.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "horizontal_firing",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1, 1 )

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[node name="TurretEnemy" type="KinematicBody2D"]
collision_layer = 2147483650
collision_mask = 7
script = ExtResource( 4 )

[node name="DyingTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 2 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "horizontal_firing"
playing = true

[node name="TintTween" type="Tween" parent="AnimatedSprite"]

[node name="HitCollision" type="Area2D" parent="."]
gravity_vec = Vector2( 0, 0 )
collision_layer = 0

[node name="HitCollisionShape" type="CollisionShape2D" parent="HitCollision"]
shape = SubResource( 3 )
disabled = true

[node name="FiringDirectionCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 7

[node name="FiringChargingTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FiringTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FiringCooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FiringLight" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 4 )
scale = Vector2( 0.75, 0.75 )
z_index = 1
texture = ExtResource( 6 )
offset = Vector2( 15, 1 )

[node name="Tween" type="Tween" parent="FiringLight"]

[node name="LaserBeam" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 10, 0 )
[connection signal="timeout" from="DyingTimer" to="." method="_on_DyingTimer_timeout"]
[connection signal="body_entered" from="HitCollision" to="." method="_on_HitCollision_body_entered"]
[connection signal="body_exited" from="HitCollision" to="." method="_on_HitCollision_body_exited"]
[connection signal="timeout" from="FiringChargingTimer" to="." method="_on_FiringChargingTimer_timeout"]
[connection signal="timeout" from="FiringTimer" to="." method="_on_FiringTimer_timeout"]
[connection signal="timeout" from="FiringCooldownTimer" to="." method="_on_FiringCooldownTimer_timeout"]
